--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Contact Us</title>
    <%- include('./Component/cssScript') %>
     <link rel="stylesheet" href="/css/index.css" type="text/css">
 </head>
